# chkapi

./: .gitignore  CHANGELOG.md  README.md  README.rst  pyproject.toml
.github/workflows/: codeql-analysis.yml
chkapi/: app.py  events.py  storages.py  widgets.py
features/: api_get_url.feature  autocomplete_recent_urls.feature  error_handling.feature  search.feature  show_data_from_url.feature
rest_checker/: api_reader.py  app.py  events.py  exceptions.py  search.py  views.py  widgets.py
tests/: test_api_get_url.py  test_api_reader.py  test_features.py  test_rest_checker.py  test_storages.py  test_url.py
