[tool.poetry]
name = "rest-checker"
version = "0.1.0"
description = ""
authors = ["climbus <climbus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.12"
requests = "^2.26.0"
textual-inputs = "^0.1.2"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
