[tool.poetry]
name = "rest-checker"
version = "0.1.0"
description = "Console based app for browsing API"
authors = ["Jarosław Kulesza <climbus@gmail.com>"]
license = "MIT"
repository = "https://github.com/climbus/rest-checker"

[tool.poetry.dependencies]
python = "^3.8"
textual = "^0.1.12"
textual-inputs = "^0.1.2"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
pytest-asyncio = "^0.16.0"
pytest-httpserver = "^1.0.2"
isort = "^5.9.3"

[tool.poetry.scripts]
restch = 'rest_checker.app:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
